Fixed a bug re showing the progress bar when fetching product details. Also, we now show an external link png next to external links e.g. m

--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -59,7 +59,7 @@
 
             </form>
 
-            <div class="progress progress-striped active" ng-show="showProgressBar">
+            <div class="progress progress-striped active" ng-show="progressBarVisible">
                 <div class="bar" style="width: 100%;"></div>
             </div>
 
