--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
-<div id="containerDiv" class="container-fluid" ng-app="WinePickerApp" ng-controller="WinePickerController">
+<div id="containerDiv" class="container-fluid" data-ng-app="WinePickerApp" data-ng-controller="WinePickerController">
     <div class="row">
         
         <div class="span4">
@@ -21,33 +21,33 @@
             
             <form class="form-search" action="">
                 
-                <select id="wineTypeMenu" ng-model="selectedWineType" ng-change="onWineTypeChanged()">
+                <select id="wineTypeMenu" data-ng-model="selectedWineType" data-ng-change="onWineTypeChanged()">
                     <option value="">Any Wine Type</option>
-                    <option ng-repeat="wineType in wineTypes" value="{{wineType.Id}}">{{wineType.Name}}</option>
+                    <option data-ng-repeat="wineType in wineTypes" value="{{wineType.Id}}">{{wineType.Name}}</option>
                 </select>
 
                 <br />
                 <br />
 
-                <select id="varietalMenu" ng-model="selectedVarietal" ng-change="onVarietalChanged()">
+                <select id="varietalMenu" data-ng-model="selectedVarietal" data-ng-change="onVarietalChanged()">
                     <option value="">Any Varietal</option>
-                    <option ng-repeat="varietal in varietals" value="{{varietal.Id}}">{{varietal.Name}}</option>
+                    <option data-ng-repeat="varietal in varietals" value="{{varietal.Id}}">{{varietal.Name}}</option>
                 </select>
 
                 <br />
                 <br />
 
-                <select id="regionMenu" ng-model="selectedRegion" ng-change="onRegionChanged()">
+                <select id="regionMenu" data-ng-model="selectedRegion" data-ng-change="onRegionChanged()">
                     <option value="">Any Region</option>
-                    <option ng-repeat="region in regions" value="{{region.Id}}">{{region.Name}}</option>
+                    <option data-ng-repeat="region in regions" value="{{region.Id}}">{{region.Name}}</option>
                 </select>
 
                 <br />
                 <br />
 
-                <select id="appellationMenu" ng-model="selectedAppellation" ng-change="onAppellationChanged()">
+                <select id="appellationMenu" data-ng-model="selectedAppellation" data-ng-change="onAppellationChanged()">
                     <option value="">Any Appellation</option>
-                    <option ng-repeat="appellation in appellations" value="{{appellation.Id}}">{{appellation.Name}}</option>
+                    <option data-ng-repeat="appellation in appellations" value="{{appellation.Id}}">{{appellation.Name}}</option>
                 </select>
 
                 <br />
@@ -58,7 +58,7 @@
                 </div>
                 <div id="moreSearchCriteria" class="accordion-body collapse out">
                     <div class="accordion-inner">
-                        <select id="state" ng-model="state" ng-change="onStateChanged()">
+                        <select id="state" data-ng-model="state" data-ng-change="onStateChanged()">
                             <option value="">Select a US state</option>
                             <option value="CA">California</option>
                             <option value="WA">Washington</option>
@@ -68,17 +68,17 @@
 
                 <br />
 
-                <input id="searchTerm" type="text" class="search-query span4" placeholder="Search" ng-model="searchTerm">
-                <button id="searchButton" class="btn btn-primary" type="submit" ng-click="onSearch()"><i class="icon-search icon-white"></i>&nbsp;Search for wines</button>
-                <button id="resetButton" class="btn " type="button" ng-click="onReset()"><i class="icon-remove"></i>&nbsp;Reset</button>
+                <input id="searchTerm" type="text" class="search-query span4" placeholder="Search" data-ng-model="searchTerm">
+                <button id="searchButton" class="btn btn-primary" type="submit" data-ng-click="onSearch()"><i class="icon-search icon-white"></i>&nbsp;Search for wines</button>
+                <button id="resetButton" class="btn " type="button" data-ng-click="onReset()"><i class="icon-remove"></i>&nbsp;Reset</button>
 
             </form>
 
-            <div class="progress progress-striped active" ng-show="progressBarVisible">
+            <div class="progress progress-striped active" data-ng-show="progressBarVisible">
                 <div class="bar" style="width: 100%;"></div>
             </div>
 
-            <div ng-view></div>
+            <div data-ng-view></div>
             
         </div>
         <div class="span2" />
