--- a/WinePickerWeb/Views/Shared/_MyLayout.cshtml
+++ b/WinePickerWeb/Views/Shared/_MyLayout.cshtml
@@ -6,6 +6,7 @@
         <title>@ViewBag.Title</title>
         <link href="~/Content/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/css/WinePicker.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div>
