--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -64,11 +64,97 @@
                 </div>
                 <div id="moreSearchCriteria" class="accordion-body collapse out">
                     <div class="accordion-inner">
-                        <select id="state" data-ng-model="state" data-ng-change="onStateChanged()">
+                        <select class="span3" id="state" data-ng-model="state" data-ng-change="onStateChanged()">
                             <option value="">Select a US state</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
                             <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaiʻi</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
                             <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
                         </select>
+
+                        <br />
+                        <br />
+                        
+                        <span class="span1" style="margin-right: 20px;">In stock:</span>
+                        <label class="radio" style="margin-right: 20px;">
+                            <input type="radio" name="instockRadios" id="instockRadiosOption2" value="1" data-ng-model="instock" data-ng-disabled="!state">
+                            Yes
+                        </label>
+                        <label class="radio" style="margin-right: 20px;">
+                            <input type="radio" name="instockRadios" id="instockRadiosOption1" value="" data-ng-model="instock" data-ng-disabled="!state">
+                            Unspecified
+                        </label>
+                        
+                        <br />
+                        <br />
+
+                        <span class="span1">Price:</span>
+                        <label>
+                            <input class="span1" type="number" data-ng-model="priceFrom" />
+                        </label>
+                        <label>
+                            <input class="span1" type="number" data-ng-model="priceTo" />
+                        </label>
+                        
+                        <br />
+                        <br />
+
+                        <span class="span1">Rating:</span>
+                        <label>
+                            <input class="span1" type="number" data-ng-model="ratingFrom" />
+                        </label>
+                        <label>
+                            <input class="span1" type="number" data-ng-model="ratingTo" />
+                        </label>
+                        
+                        <br />
+
                     </div>
                 </div>
 
