Split config, factory and directive bits into separate source files

--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -139,7 +139,7 @@
                             <input class="span1" type="number" data-ng-model="priceFrom" />
                         </label>
                         <label>
-                            <input class="span1" type="number" data-ng-model="priceTo" />
+                            <input class="span1" type="number" data-ng-model="priceTo" data-ng-disabled="!priceFrom" />
                         </label>
                         
                         <br />
@@ -150,7 +150,7 @@
                             <input class="span1" type="number" data-ng-model="ratingFrom" />
                         </label>
                         <label>
-                            <input class="span1" type="number" data-ng-model="ratingTo" />
+                            <input class="span1" type="number" data-ng-model="ratingTo" data-ng-disabled="!ratingFrom" />
                         </label>
                         
                         <br />
