Fixed failing unit tests
Also, moved WineApi.js and its unit tests into a separate folder since
we no longer use it (we now do all wine.com API calls via the server
which acts as a proxy).

--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -19,9 +19,13 @@
             <br />
             <br />
             
-            <div class="alert alert-error" data-ng-cloak data-ng-show="errorMessagesVisible">
-                <button type="button" class="close" data-ng-click="errorMessagesVisible = false">&times;</button>
-                <strong>Error!</strong>&nbsp;<span data-ng-repeat="errorMessage in errorMessages">{{errorMessage}}<br data-ng-hide="$last" /></span>
+            <div class="alert alert-error" data-ng-cloak data-ng-show="winePickerModel.errorMessagesVisible">
+                <button type="button" class="close" data-ng-click="winePickerModel.errorMessagesVisible = false">&times;</button>
+                <strong>Error!</strong>
+                <br />
+                <span data-ng-repeat="errorMessage in winePickerModel.errorMessages">{{errorMessage}}
+                    <br data-ng-hide="$last" />
+                </span>
                 <br />
             </div>
 
@@ -196,7 +200,7 @@
 
             </form>
 
-            <div class="progress progress-striped active" data-ng-cloak data-ng-show="wineApiCallInProgress">
+            <div class="progress progress-striped active" data-ng-cloak data-ng-show="winePickerModel.wineApiCallInProgress">
                 <div class="bar" style="width: 100%;"></div>
             </div>
 
