--- a/WinePickerWeb/Views/Shared/_MyLayout.cshtml
+++ b/WinePickerWeb/Views/Shared/_MyLayout.cshtml
@@ -7,7 +7,12 @@
         <link href="~/Content/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/css/WinePicker.css" rel="stylesheet" type="text/css" />
-    </head>
+        <style>
+            [data-ng-cloak] {
+                display: none;
+            }
+        </style>
+        </head>
     <body>
         <div>
             @RenderBody()
