--- a/WinePickerWeb/Views/WinePicker/Index.cshtml
+++ b/WinePickerWeb/Views/WinePicker/Index.cshtml
@@ -204,6 +204,17 @@
             <div class="progress progress-striped active" data-ng-cloak data-ng-show="winePickerModel.wineApiCallInProgress">
                 <div class="bar" style="width: 100%;"></div>
             </div>
+            
+            <!--
+            <div id="wineApiCallInProgressModal" class="modal hide" data-jt-modal-show-hide="winePickerModel.wineApiCallInProgress">
+                <div class="modal-header">
+                    <h3>wine.com API call in progress...</h3>
+                </div>
+                <div class="modal-body">
+                    <p>Retrieving details of wine, "XYZ".</p>
+                </div>
+            </div>
+            -->
 
             <div data-ng-view></div>
             
