Started to look at how to use $httpBackend fake responses during e2e testing

--- a/WinePickerWeb/Views/Shared/_MyLayout.cshtml
+++ b/WinePickerWeb/Views/Shared/_MyLayout.cshtml
@@ -18,5 +18,7 @@
             @RenderBody()
         </div>
         @Scripts.Render("~/bundles/WinePicker")
+        <script type="text/javascript" src="~/Scripts/angular-mocks.js"></script>
+        <script type="text/javascript" src="~/Scripts/WinePicker/EndToEndTests/WinePickerEndToEndTestHttpBackendSetup.js"></script>
     </body>
 </html>
