Getting closer to dynamically switching between WinePickerApp and WinePickerAppE2E

--- a/WinePickerWeb/Views/Shared/_MyLayout.cshtml
+++ b/WinePickerWeb/Views/Shared/_MyLayout.cshtml
@@ -18,7 +18,14 @@
             @RenderBody()
         </div>
         @Scripts.Render("~/bundles/WinePicker")
-        <script type="text/javascript" src="~/Scripts/angular-mocks.js"></script>
-        <script type="text/javascript" src="~/Scripts/WinePicker/EndToEndTests/WinePickerEndToEndTestHttpBackendSetup.js"></script>
+        
+        @{
+            var isEndToEndTest = (bool)Context.Items["isEndToEndTest"];
+            if (isEndToEndTest)
+            {
+                <script type="text/javascript" src="~/Scripts/angular-mocks.js"></script>
+                <script type="text/javascript" src="~/Scripts/WinePicker/EndToEndTests/WinePickerEndToEndTestHttpBackendSetup.js"></script>
+            }
+        }
     </body>
 </html>
